Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9225

mysql_upgrade segfault due to missing /etc/my.cnf.d

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5(EOL), 10.0(EOL), 10.1(EOL)
    • 5.5.49
    • Scripts & Clients
    • 10.0.24

    Description

      Hello, I'm building a custom script which builds/installs/upgrades mariadb from 10.0.22 to 10.1.9. One part of this script is to run mysql_upgrade to ensure that the dbs are properly upgraded from 10.0.22 to 10.1.9.

      In 10.0.22 mysql_upgrade works without issues if '/etc/my.cnf.d' doesn't exists, but seems that this is an issue with 10.1.9:

      root@debian8:~# mysql_upgrade --force -u root -pMyPass -h localhost
      mysql_upgrade: Can't read dir of '/etc/my.cnf.d' (Errcode: 2 "No such file or directory")
      Fatal error in defaults handling. Program aborted
      Segmentation fault

      NOTE: I don't use /etc/my.cnf.d nor I want to.

      Attachments

        Activity

          People

            cvicentiu Vicențiu Ciorbaru
            robertalks Robert Milasan
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.75d
                0.75d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.