MDEV-9225 mysql_upgrade segfault due to missing /etc/my.cnf.d

In case of missing includedir file, we would attempt to free a NULL
pointer. Make sure to guard against that.